deploy: 25977a2795fe9647aa995deda4f5de55174bb3cf

--- a/presentations/jump-start-with-market-view/index.html
+++ b/presentations/jump-start-with-market-view/index.html
@@ -92,7 +92,7 @@ setTimeout(() => {
   </div>
   <div class="lg:pl-20">
     <div class="lg:mt-16 max-w-xs px-4 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="http://stephanieawilkinson.com/my-site/images/2021-08-20_webinar_thumbnail.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl object-cover" loading="lazy" style="color: transparent;" width="800" height="800">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="/images/2021-08-20_webinar_thumbnail.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl object-cover" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
     <div class="mt-16">
       <div class="columns-2">
