--- a/projects/index.html
+++ b/projects/index.html
@@ -112,34 +112,6 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/images/member_vote.png" alt="" />
-        </div>
-        <div class="flex flex-1 flex-col justify-between bg-white p-6">
-          <div class="flex-1">
-            <p class="text-sm font-medium text-indigo-600">
-              <a href="#" class="hover:underline">
-                Nonprofit
-              </a>
-            </p>
-            <a href="#" class="mt-2 block">
-              <p class="text-3xl font-semibold text-gray-900">
-                Member Vote
-              </p>
-              <p class="mt-3 text-base text-gray-500">
-                Proxy voting for NAIS members
-              </p>
-            </a>
-          </div>
-          <div class="mt-6 flex items-center">
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ruby</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">tailwind</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">roda</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">oauth</span>
-          </div>
-        </div>
-      </div>
-      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
-        <div class="flex-shrink-0">
           <img class="h-80 w-full object-cover" src="/images/conrex.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
@@ -167,7 +139,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="https://marketview.nais.org/assets/svgs/mv-logo.svg" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/market-view.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -189,6 +161,34 @@ setTimeout(() => {
               <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
               <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
               <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">emberjs</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-80 w-full object-cover" src="/images/member_vote.png" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Nonprofit
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Member Vote
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                Proxy voting for NAIS members
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ruby</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">tailwind</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">roda</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">oauth</span>
           </div>
         </div>
       </div>
